--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -263,134 +263,135 @@
         android:id="@+id/linearLayout5"
         android:layout_width="50dp"
         android:layout_height="70dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589">
+        app:layout_constraintTop_toBottomOf="@+id/guitarString6"
+        app:layout_constraintVertical_bias="0.16">
 
         <NumberPicker
             android:id="@+id/submitPicker1"
-            android:descendantFocusability="blocksDescendants"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="50dp"
         android:layout_height="70dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout5"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589">
+        app:layout_constraintTop_toBottomOf="@+id/guitarString6"
+        app:layout_constraintVertical_bias="0.16">
 
         <NumberPicker
             android:id="@+id/submitPicker2"
-            android:descendantFocusability="blocksDescendants"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="50dp"
         android:layout_height="70dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589">
+        app:layout_constraintTop_toBottomOf="@+id/guitarString6"
+        app:layout_constraintVertical_bias="0.16">
 
         <NumberPicker
             android:id="@+id/submitPicker3"
-            android:descendantFocusability="blocksDescendants"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="50dp"
         android:layout_height="70dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589">
+        app:layout_constraintTop_toBottomOf="@+id/guitarString6"
+        app:layout_constraintVertical_bias="0.16">
 
         <NumberPicker
             android:id="@+id/submitPicker4"
-            android:descendantFocusability="blocksDescendants"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout6"
         android:layout_width="50dp"
         android:layout_height="70dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589">
+        app:layout_constraintTop_toBottomOf="@+id/guitarString6"
+        app:layout_constraintVertical_bias="0.16">
 
         <NumberPicker
             android:id="@+id/submitPicker5"
-            android:descendantFocusability="blocksDescendants"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="50dp"
         android:layout_height="70dp"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/white"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/linearLayout6"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589">
+        app:layout_constraintTop_toBottomOf="@+id/guitarString6"
+        app:layout_constraintVertical_bias="0.16">
 
         <NumberPicker
             android:id="@+id/submitPicker6"
-            android:descendantFocusability="blocksDescendants"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:descendantFocusability="blocksDescendants" />
     </LinearLayout>
 
 
