--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -242,80 +242,74 @@
         android:textSize="40sp"
         android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fret5"
         app:layout_constraintTop_toTopOf="@+id/guitarString5" />
 
-    <NumberPicker
-        android:id="@+id/submitPicker1"
-        android:layout_width="50dp"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/linearLayout"
+        android:layout_width="350dp"
         android:layout_height="90dp"
         android:layout_marginTop="35dp"
-        android:background="@android:color/white"
-        android:descendantFocusability="blocksDescendants"
-        app:layout_constraintEnd_toStartOf="@+id/submitPicker2"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <NumberPicker
-        android:id="@+id/submitPicker2"
-        android:layout_width="50dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="35dp"
-        android:background="@android:color/white"
-        android:descendantFocusability="blocksDescendants"
-        app:layout_constraintEnd_toStartOf="@+id/submitPicker3"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/submitPicker1"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <NumberPicker
-        android:id="@+id/submitPicker3"
-        android:layout_width="50dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="35dp"
-        android:background="@android:color/white"
-        android:descendantFocusability="blocksDescendants"
-        app:layout_constraintEnd_toStartOf="@+id/submitPicker4"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/submitPicker2"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <NumberPicker
-        android:id="@+id/submitPicker4"
-        android:layout_width="50dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="35dp"
-        android:background="@android:color/white"
-        android:descendantFocusability="blocksDescendants"
-        app:layout_constraintEnd_toStartOf="@+id/submitPicker5"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/submitPicker3"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <NumberPicker
-        android:id="@+id/submitPicker5"
-        android:layout_width="50dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="35dp"
-        android:background="@android:color/white"
-        android:descendantFocusability="blocksDescendants"
-        app:layout_constraintEnd_toStartOf="@+id/submitPicker6"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/submitPicker4"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
-
-    <NumberPicker
-        android:id="@+id/submitPicker6"
-        android:layout_width="50dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="35dp"
-        android:background="@android:color/white"
-        android:descendantFocusability="blocksDescendants"
+        android:gravity="center"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/submitPicker5"
-        app:layout_constraintTop_toBottomOf="@+id/view" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view">
+
+        <NumberPicker
+            android:id="@+id/submitPicker1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:descendantFocusability="blocksDescendants" />
+
+        <NumberPicker
+            android:id="@+id/submitPicker2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:descendantFocusability="blocksDescendants" />
+
+        <NumberPicker
+            android:id="@+id/submitPicker3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:descendantFocusability="blocksDescendants" />
+
+        <NumberPicker
+            android:id="@+id/submitPicker4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:descendantFocusability="blocksDescendants" />
+
+        <NumberPicker
+            android:id="@+id/submitPicker5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:descendantFocusability="blocksDescendants" />
+
+        <NumberPicker
+            android:id="@+id/submitPicker6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:background="@android:color/white"
+            android:descendantFocusability="blocksDescendants" />
+
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
